--- a/templates/nested/elasticsearch.yaml
+++ b/templates/nested/elasticsearch.yaml
@@ -8,7 +8,7 @@ Metadata:
           default: ES Stack Configuration
         Parameters:
           - VPCID
-          - VPCCIDR
+          #- VPCCIDR
           - PrivateSubnet1
           - PrivateSubnet2
           - PrivateSubnet3
@@ -27,8 +27,8 @@ Metadata:
         default: The ID of Private Subnet 3
       VPCID:
         default: VPC ID
-      VPCCIDR:
-        default: VPC CIDR
+      #VPCCIDR:
+      #  default: VPC CIDR
       ESDomainName:
         default: Elasticsearch Domain
       Environment:
@@ -52,12 +52,12 @@ Parameters:
   VPCID:
     Description: ID for the VPC
     Type: AWS::EC2::VPC::Id
-  VPCCIDR:
-    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
-    ConstraintDescription: "CIDR block parameter must be in the form x.x.x.x/16-28"
-    Default: "10.0.0.0/16"
-    Description: "CIDR block for the VPC"
-    Type: "String"
+  #VPCCIDR:
+  #  AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
+  #  ConstraintDescription: "CIDR block parameter must be in the form x.x.x.x/16-28"
+  #  Default: "10.0.0.0/16"
+  #  Description: "CIDR block for the VPC"
+  #  Type: "String"
   ESVolumeSize:
     Default: 50
     Description: Data Node Volume Size in GB
@@ -113,18 +113,19 @@ Resources:
             GroupDescription: "Allow inbound traffic to ElasticSearch from VPC CIDR"
             GroupName: !Sub "${ESDomainName}-elasticsearch-sg"
             VpcId: !Ref VPCID
-            SecurityGroupIngress:
-              -
-                CidrIp: !Ref VPCCIDR
-                FromPort: 443
-                IpProtocol: "tcp"
-                ToPort: 443
+            #SecurityGroupIngress:
+            #  -
+            #    CidrIp: !Ref VPCCIDR
+            #    FromPort: 443
+            #    IpProtocol: "tcp"
+            #    ToPort: 443
 
     ESSecurityGroupIngress01:
         Type: "AWS::EC2::SecurityGroupIngress"
         Properties:
             GroupId: !Ref ESSecurityGroup
-            SourceSecurityGroupId: !Ref NodeSecurityGroup
+            #SourceSecurityGroupId: !Ref NodeSecurityGroup
+            SourceSecurityGroupId: !Sub "{{resolve:ssm:/${Environment}/${EksClusterName}/eks/clusterSecurityGroupId}}"
             SourceSecurityGroupOwnerId: !Ref AWS::AccountId
             FromPort: 443
             IpProtocol: "tcp"
