--- a/templates/nested/msk.yaml
+++ b/templates/nested/msk.yaml
@@ -8,7 +8,6 @@ Metadata:
           default: MSK Stack Configuration
         Parameters:
           - VPCID
-          #- VPCCIDR
           - DBSubnet1
           - DBSubnet2
           - DBSubnet3
@@ -28,8 +27,6 @@ Metadata:
         default: The ID of Private Subnet 3
       VPCID:
         default: VPC ID
-      #VPCCIDR:
-      #  default: VPC CIDR
       MSKClusterName:
         default: MSK Cluster Name
       Environment:
@@ -55,12 +52,6 @@ Parameters:
   VPCID:
     Description: ID for the VPC
     Type: AWS::EC2::VPC::Id
-  #VPCCIDR:
-  #  AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
-  #  ConstraintDescription: "CIDR block parameter must be in the form x.x.x.x/16-28"
-  #  Default: "10.0.0.0/16"
-  #  Description: "CIDR block for the VPC"
-  #  Type: "String"
   MSKInstanceType:
     AllowedValues:
       - kafka.t3.small
@@ -97,61 +88,31 @@ Resources:
         Type: "AWS::EC2::SecurityGroupIngress"
         Properties:
             GroupId: !Ref MSKSecurityGroup
-            #SourceSecurityGroupId: !Ref NodeSecurityGroup
             SourceSecurityGroupId: !Sub "{{resolve:ssm:/${Environment}/${EksClusterName}/eks/clusterSecurityGroupId}}"
             SourceSecurityGroupOwnerId: !Ref AWS::AccountId
             FromPort: 9094
             IpProtocol: "tcp"
             ToPort: 9094
 
-    #MSKSecurityGroupIngress01vpc:
-    #    Type: "AWS::EC2::SecurityGroupIngress"
-    #    Properties:
-    #        GroupId: !Ref MSKSecurityGroup
-    #        CidrIp: !Ref VPCCIDR
-    #        FromPort: 9094
-    #        IpProtocol: "tcp"
-    #        ToPort: 9094
-
     MSKSecurityGroupIngress02:
         Type: "AWS::EC2::SecurityGroupIngress"
         Properties:
             GroupId: !Ref MSKSecurityGroup
-            #SourceSecurityGroupId: !Ref NodeSecurityGroup
-            SourceSecurityGroupId: !Sub {{resolve:ssm:/${Environment}/${EksClusterName}/eks/clusterSecurityGroupId}}
+            SourceSecurityGroupId: !Sub "{{resolve:ssm:/${Environment}/${EksClusterName}/eks/clusterSecurityGroupId}}"
             SourceSecurityGroupOwnerId: !Ref AWS::AccountId
             FromPort: 2181
             IpProtocol: "tcp"
             ToPort: 2181
 
-    #MSKSecurityGroupIngress02vpc:
-    #    Type: "AWS::EC2::SecurityGroupIngress"
-    #    Properties:
-    #        GroupId: !Ref MSKSecurityGroup
-    #        CidrIp: !Ref VPCCIDR
-    #        FromPort: 2181
-    #        IpProtocol: "tcp"
-    #        ToPort: 2181
-
     MSKSecurityGroupIngress03:
         Type: "AWS::EC2::SecurityGroupIngress"
         Properties:
             GroupId: !Ref MSKSecurityGroup
-            #SourceSecurityGroupId: !Ref NodeSecurityGroup
             SourceSecurityGroupId: !Sub {{resolve:ssm:/${Environment}/${EksClusterName}/eks/clusterSecurityGroupId}}
             SourceSecurityGroupOwnerId: !Ref AWS::AccountId
             FromPort: 9092
             IpProtocol: "tcp"
             ToPort: 9092
-
-    #MSKSecurityGroupIngress03vpc:
-    #    Type: "AWS::EC2::SecurityGroupIngress"
-    #    Properties:
-    #        GroupId: !Ref MSKSecurityGroup
-    #        CidrIp: !Ref VPCCIDR
-    #        FromPort: 9092
-    #        IpProtocol: "tcp"
-    #        ToPort: 9092
 
     MSKCluster:
         Type: "AWS::MSK::Cluster"
