--- a/templates/nested/admin.yaml
+++ b/templates/nested/admin.yaml
@@ -311,9 +311,9 @@ Resources:
                 aws kms generate-random --region ${AWS::Region} --number-of-bytes 16  --output text --query Plaintext>datahub-password
                 DATAHUB_PASSWORD=$(cat datahub-password)
                 if [ "$EXTRA_TAGS_FLAG" == "true" ]; then
-                  aws secretsmanager create-secret --tags $EXTRA_TAGS --region ${AWS::Region} --name "/${Environment}/${EKSClusterName}/admin/password" --secret-string "$DATAHUB_PASSWORD" --description "${Environment}: DataHub Admin password"
+                  aws secretsmanager create-secret --tags $EXTRA_TAGS --region ${AWS::Region} --name "/${Environment}/${EKSClusterName}/admin/password" --secret-string "$DATAHUB_PASSWORD" --description "${Environment}/${EKSClusterName}: DataHub Admin password"
                 else
-                  aws secretsmanager create-secret --region ${AWS::Region} --name "/${Environment}/${EKSClusterName}/admin/password" --secret-string "$DATAHUB_PASSWORD" --description "${Environment}: DataHub Admin password"
+                  aws secretsmanager create-secret --region ${AWS::Region} --name "/${Environment}/${EKSClusterName}/admin/password" --secret-string "$DATAHUB_PASSWORD" --description "${Environment}//${EKSClusterName}: DataHub Admin password"
                 fi
                 tar xzvf /tmp/python-jwt.tar.gz
                 cd python-jwt
@@ -322,9 +322,9 @@ Resources:
                 python3 create_jwt.py>apikey
                 APIKEY=$(cat apikey)
                 if [ "$EXTRA_TAGS_FLAG" == "true" ]; then
-                  aws secretsmanager create-secret --tags $EXTRA_TAGS --region ${AWS::Region} --name "/${Environment}/${EKSClusterName}/admin/apikey" --secret-string "$APIKEY" --description "${Environment}: DataHub Admin Apikey" 
+                  aws secretsmanager create-secret --tags $EXTRA_TAGS --region ${AWS::Region} --name "/${Environment}/${EKSClusterName}/admin/apikey" --secret-string "$APIKEY" --description "${Environment}//${EKSClusterName}: DataHub Admin Apikey" 
                 else
-                  aws secretsmanager create-secret --region ${AWS::Region} --name "/${Environment}/${EKSClusterName}/admin/apikey" --secret-string "$APIKEY" --description "${Environment}: DataHub Admin Apikey" 
+                  aws secretsmanager create-secret --region ${AWS::Region} --name "/${Environment}/${EKSClusterName}/admin/apikey" --secret-string "$APIKEY" --description "${Environment}/${EKSClusterName}: DataHub Admin Apikey" 
                 fi
                 cd ..
                 echo "prepare secrets..."
