fix parameter store path

--- a/templates/nested/privatelink.yaml
+++ b/templates/nested/privatelink.yaml
@@ -13,7 +13,7 @@ Resources:
     Properties:
       AcceptanceRequired: True
       NetworkLoadBalancerArns:
-        - !Sub '{{resolve:ssm:${Environment}/${EKSClusterName}/kotsadm/nlbarn}}'
+        - !Sub '{{resolve:ssm:/${Environment}/${EKSClusterName}/kotsadm/nlbarn}}'
 
   EndpointServicePermissions:
     Type: AWS::EC2::VPCEndpointServicePermissions
